--- a/Homework/TabBarHomework/TabBarHomework/Base.lproj/Main.storyboard
+++ b/Homework/TabBarHomework/TabBarHomework/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5em-U7-wPy">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController restorationIdentifier="ViewController" storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +17,154 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gu9-0F-uuV">
+                                <frame key="frameInset" minX="59" minY="152" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="onViewTouch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AkK-Gx-Apa"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" id="7ma-qu-964"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2850.4000000000001" y="61.619190404797607"/>
+        </scene>
+        <!--View Controller2-->
+        <scene sceneID="AKS-2B-6w0">
+            <objects>
+                <viewController storyboardIdentifier="ViewController2" id="Ha0-3I-YXf" customClass="ViewController2" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="lHk-je-13t"/>
+                        <viewControllerLayoutGuide type="bottom" id="89m-Qx-BZB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7vR-Yh-1L5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o0K-mZ-NmT">
+                                <frame key="frameInset" minX="141" minY="210" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="onViewTouch3:" destination="Ha0-3I-YXf" eventType="touchUpInside" id="izb-ON-Krv"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.50196081400000003" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="IEz-ya-YY9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="owa-Zn-Z3Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3577" y="67"/>
+        </scene>
+        <!--View Controller6-->
+        <scene sceneID="ghr-zl-1he">
+            <objects>
+                <viewController storyboardIdentifier="ViewController6" id="NQ4-Ln-7kI" customClass="ViewController6" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="t0C-tX-kAR"/>
+                        <viewControllerLayoutGuide type="bottom" id="vR1-27-Spm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DCH-J7-Oih">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ws4-vB-EZG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3577" y="700"/>
+        </scene>
+        <!--View Controller3-->
+        <scene sceneID="Knl-4X-uiI">
+            <objects>
+                <viewController storyboardIdentifier="ViewController3" id="iuJ-1b-53J" customClass="ViewController3" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tq5-2O-gGQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="4hs-40-1HA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hAO-Hq-TZ3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fou-hh-BIE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4164" y="67"/>
+        </scene>
+        <!--View Controller5-->
+        <scene sceneID="dIv-kD-Cly">
+            <objects>
+                <viewController restorationIdentifier="ViewController5" storyboardIdentifier="ViewController5" id="dOU-dM-fMj" customClass="ViewController5" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rCF-MG-ZbE"/>
+                        <viewControllerLayoutGuide type="bottom" id="icb-if-6fq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="EA7-Z5-EJQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="gCQ-QN-TOc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gfx-QG-SVg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1551" y="67"/>
+        </scene>
+        <!--View Controller4-->
+        <scene sceneID="DSW-ar-f1B">
+            <objects>
+                <viewController restorationIdentifier="ViewController4" storyboardIdentifier="ViewController4" id="bEs-Ti-FvW" customClass="ViewController4" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Xdl-vQ-EpB"/>
+                        <viewControllerLayoutGuide type="bottom" id="8Ak-w6-uVK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MnM-dO-AZ4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wcZ-uX-nMB">
+                                <frame key="frameInset" minX="73" minY="150" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="onViewTouch2:" destination="bEs-Ti-FvW" eventType="touchUpInside" id="QPQ-M5-4wR"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="fhD-9W-Nps"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u1i-9D-gn4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2209" y="62"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="tif-hy-W9j">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5em-U7-wPy" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZsR-8r-zrv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="LGd-Cu-jo8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="59p-4x-dwH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2850" y="-773"/>
         </scene>
     </scenes>
 </document>
