--- a/Project/Project/Project/Base.lproj/Main.storyboard
+++ b/Project/Project/Project/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,22 +22,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uSh-A6-hjY">
-                                <rect key="frame" x="0.0" y="28" width="375" height="256"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="1gz-lo-0at">
-                                        <rect key="frame" x="168" y="219" width="39" height="37"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </pageControl>
-                                </subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LZK-oB-691">
+                                <rect key="frame" x="0.0" y="20" width="375" height="274"/>
                             </scrollView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Kga-fe-7xt">
+                                <rect key="frame" x="168" y="293" width="39" height="37"/>
+                            </pageControl>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="LZK-oB-691" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="49b-H9-z3F"/>
+                            <constraint firstItem="LZK-oB-691" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Dqa-Fg-6M4"/>
+                            <constraint firstAttribute="trailing" secondItem="LZK-oB-691" secondAttribute="trailing" id="Jry-PF-VJM"/>
+                            <constraint firstItem="Kga-fe-7xt" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottomMargin" constant="-337" id="Kpt-me-HRR"/>
+                            <constraint firstItem="Kga-fe-7xt" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="293" id="OAJ-Or-41z"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LZK-oB-691" secondAttribute="bottom" constant="373" id="Ysw-dB-4MT"/>
+                            <constraint firstAttribute="trailing" secondItem="Kga-fe-7xt" secondAttribute="trailing" constant="168" id="ltm-sv-2Ka"/>
+                            <constraint firstItem="Kga-fe-7xt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="o8H-XH-wcY"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="pageControl" destination="1gz-lo-0at" id="8bl-Je-reL"/>
-                        <outlet property="scrollView" destination="uSh-A6-hjY" id="rF1-N4-w7y"/>
+                        <outlet property="pageControl" destination="Kga-fe-7xt" id="xwg-wU-bh6"/>
+                        <outlet property="scrollView" destination="LZK-oB-691" id="0G0-EX-IAm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
